--- a/package.json
+++ b/package.json
@@ -9,20 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@passageidentity/passage-elements": "latest",
+    "@passageidentity/passage-node": "^2.3.0",
     "@types/node": "20.1.7",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
     "bcrypt": "^5.1.0",
     "eslint": "8.40.0",
-    "eslint-config-next": "13.4.2",
+    "eslint-config-next": "^13.4.4",
     "mongodb": "^5.5.0",
     "mongoose": "^7.1.1",
-    "next": "13.4.2",
+    "next": "^13.4.4",
     "next-auth": "^4.22.1",
     "postcss": "8.4.23",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
   }
