--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bcrypt": "^5.1.0",
     "eslint": "8.40.0",
     "eslint-config-next": "^13.4.4",
+    "framer-motion": "^10.12.16",
     "mongodb": "^5.5.0",
     "mongoose": "^7.1.1",
     "next": "^13.4.4",
@@ -27,5 +28,15 @@
     "react-dom": "^18.2.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "@emotion/babel-plugin": "^11.11.0",
+    "babel-plugin-macros": "^3.1.0",
+    "twin.macro": "^3.3.1"
+  },
+  "babelMacros": {
+    "twin": {
+      "preset": "emotion"
+    }
   }
 }
