--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "name": "promptopia",
   "version": "0.1.0",
   "private": true,
+  "babelMacros": {
+    "twin": {
+      "preset": "styled-components"
+    }
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -9,12 +14,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
     "@passageidentity/passage-elements": "latest",
     "@passageidentity/passage-node": "^2.3.0",
-    "@types/node": "20.1.7",
-    "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
     "bcrypt": "^5.1.0",
@@ -23,23 +24,24 @@
     "framer-motion": "^10.12.16",
     "mongodb": "^5.5.0",
     "mongoose": "^7.1.1",
-    "next": "^13.4.4",
+    "next": "^13.3.0",
     "next-auth": "^4.22.1",
-    "postcss": "8.4.23",
+    "postcss": "^8.4.24",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tailwindcss": "3.3.2",
-    "typescript": "5.0.4"
+    "styled-components": "^5.3.9"
   },
   "devDependencies": {
-    "@emotion/babel-plugin": "^11.11.0",
+    "@babel/core": "^7.21.4",
+    "@babel/plugin-syntax-typescript": "^7.21.4",
+    "@types/node": "18.15.11",
+    "@types/react": "18.0.33",
+    "@types/react-dom": "18.0.11",
+    "@types/styled-components": "^5.1.26",
+    "babel-loader": "^9.1.2",
     "babel-plugin-macros": "^3.1.0",
-    "babel-plugin-twin": "^1.1.0",
-    "twin.macro": "^3.3.1"
-  },
-  "babelMacros": {
-    "twin": {
-      "preset": "emotion"
-    }
+    "tailwindcss": "^3.3.1",
+    "twin.macro": "^3.3.0",
+    "typescript": "5.0.4"
   }
 }
