--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
   "dependencies": {
     "@passageidentity/passage-elements": "latest",
     "@passageidentity/passage-node": "^2.3.0",
-    "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
     "bcrypt": "^5.1.0",
     "eslint": "8.40.0",
@@ -32,16 +31,15 @@
     "styled-components": "^5.3.9"
   },
   "devDependencies": {
-    "@babel/core": "^7.21.4",
-    "@babel/plugin-syntax-typescript": "^7.21.4",
-    "@types/node": "18.15.11",
-    "@types/react": "18.0.33",
-    "@types/react-dom": "18.0.11",
+    "@babel/core": "^7.22.5",
+    "@babel/plugin-syntax-typescript": "^7.22.5",
+    "@types/react": "^18.2.12",
+    "@types/react-dom": "^18.2.5",
     "@types/styled-components": "^5.1.26",
     "babel-loader": "^9.1.2",
     "babel-plugin-macros": "^3.1.0",
-    "tailwindcss": "^3.3.1",
-    "twin.macro": "^3.3.0",
-    "typescript": "5.0.4"
+    "tailwindcss": "^3.3.2",
+    "twin.macro": "^3.3.1",
+    "typescript": "^5.1.3"
   }
 }
