--- a/package.json
+++ b/package.json
@@ -2,11 +2,6 @@
   "name": "promptopia",
   "version": "0.1.0",
   "private": true,
-  "babelMacros": {
-    "twin": {
-      "preset": "styled-components"
-    }
-  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -23,23 +18,16 @@
     "framer-motion": "^10.12.16",
     "mongodb": "^5.5.0",
     "mongoose": "^7.1.1",
-    "next": "^13.3.0",
+    "next": "^13.4.6",
     "next-auth": "^4.22.1",
     "postcss": "^8.4.24",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "styled-components": "^5.3.9"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.22.5",
-    "@babel/plugin-syntax-typescript": "^7.22.5",
     "@types/react": "^18.2.12",
     "@types/react-dom": "^18.2.5",
-    "@types/styled-components": "^5.1.26",
-    "babel-loader": "^9.1.2",
-    "babel-plugin-macros": "^3.1.0",
     "tailwindcss": "^3.3.2",
-    "twin.macro": "^3.3.1",
     "typescript": "^5.1.3"
   }
 }
