--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "next-auth": "^4.22.1",
     "postcss": "^8.4.24",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "zustand": "^4.3.8"
   },
   "devDependencies": {
     "@types/react": "^18.2.12",
